--- a/html/index.pug
+++ b/html/index.pug
@@ -99,6 +99,13 @@ html(lang='en')
               img.graph(src='./images/Month.png')
           br
           .row.analysis
+            .col-lg-6
+              h4 Very interestingly, sending people sms doesn't look a very effective way of improving attendance.
+              h4 We even tried to look at this metric only for patients aged between 18 and 30 (most likely to actively use sms), but the result was the same.
+            .col-lg-6.no-pad
+              img.graph(src='./images/sms_reminder.png')
+          br
+          .row.analysis
             .col-lg-6.no-pad
               img.graph(src='./images/clustering.png')
             .col-lg-6
